# Open-Octave

./: .clangd  .gitignore  README.md  start.bat  start.command
.agent/rules/: Open-Octave.md  agent-guidelines.md
.github/: copilot-instructions.md
.github/workflows/: firmware-build.yml  software-tests.yml
Arduino/OO-firmware/firmware_v2/: firmware_v2.ino
Arduino/OO-firmware/firmware_v3/: firmware_v3.ino
Arduino/OO-firmware/firmware_v4/: firmware_v4.ino  helpers.ino  key_control.ino  mode_handling.ino  testlogging.ino  wifi.ino
Arduino/OO-firmware/firmware_v5/: chord_playback.ino  chord_synthesis.ino  command_handling.ino  communication.ino  firmware_v5.ino  helpers.ino  key_control.ino  master_control.ino  mode_handling.ino  note_initialisation.ino  playback.ino  record_control.ino  sequence_control.ino  slave_control.ino  testlogging.ino  validation.ino  wifi.ino
Arduino/OO-firmware/firmware_v5/test/: CMakeLists.txt
Arduino/OO-firmware/firmware_v5/test/include/: Arduino.h  WiFi.h  Wire.h  arduino_constants.h  chord_synthesis_testable.h  communication_testable.h  firmware_V5_config.h  firmware_V5_debug.h  firmware_types.h  firmware_v5_testable.h  globals.h  helpers_testable.h  key_control_testable.h  keys.h  master_control_testable.h  platform_constants.h  record_control_testable.h  sequence_control_testable.h  slave_control_testable.h  test_debug.h  test_utils.h  validation_testable.h  wifi_testable.h
Arduino/OO-firmware/firmware_v5/test/tests/: test_chord_synthesis.cpp  test_communication.cpp  test_firmware_v5.cpp  test_helpers.cpp  test_key_control.cpp  test_master_control.cpp  test_record_control.cpp  test_sequence_control.cpp  test_slave_control.cpp  test_validation.cpp  test_wifi.cpp
Arduino/audio_test/: audio_test.ino
Arduino/libraries/ESP8266Audio/src/: AudioOutputBuffer.h
Arduino/libraries/PCA9555-master/: clsPCA9555.cpp  clsPCA9555.h
Arduino/libraries/firmware_V4_config/: firmware_V4_config.h
Arduino/libraries/firmware_V4_debug/: firmware_V4_debug.h
Arduino/libraries/firmware_V4_sequences/: firmware_V4_sequences.h
Arduino/libraries/firmware_V5_config/: firmware_V5_config.h
Arduino/libraries/firmware_V5_debug/: firmware_V5_debug.h
Arduino/libraries/firmware_v2_config/: firmware_v2_config.h
Arduino/libraries/firmware_v3_config/: firmware_v3_config.h
Arduino/libraries/firmware_v3_debug/: firmware_v3_debug.h
Arduino/libraries/firmware_v3_sequences/: firmware_v3_sequences.h
Arduino/servo_reset/: servo_reset.ino
controller/: mock_esp32_ws.js  package-lock.json  package.json  server.js
controller/database/: open-octave.sqlite3-shm  open-octave.sqlite3-wal  sqlite.js
docs/: ESP32-Setup-Guide.md  usb-connection-guide.md
docs/demo-materials/Demo_1/Demo1-report-template/: sdp_template_demo.tex
docs/planning/: demo1-F&E-plan.md  demo1-firmware-plan.md  firmware-development-roadmap.md  next-steps.md  software-specs.md
docs/planning/software/: build-note.md  software-PRD.md  software-design.md  software-firmware.md  software-specs.md  software-startup.md
docs/planning/system-design/: system-design.html
docs/planning/system-design/CAD-keyboard/: LICENSE.txt  README.txt
firmware/: config.h  firmware_config.h  firmware_v1.cpp  firmware_v2.cpp  firmware_v3  firmware_v3.cpp  firmware_v3_config.h  firmwarev3
script/: summarise_testlog.py  test1.csv  test1_summary.csv  test3.csv  test3_summary.csv
software/controller/: .env  .env.example  mock_esp32_ws.js  package-lock.json  package.json  server.js
software/controller/coverage/: clover.xml  coverage-final.json  index.html
software/controller/coverage/controller/: index.html  server.js.html
software/controller/database/: sqlite.js
software/controller/services/: midi_import.js
software/controller/tests/: api.test.js  midi_import.test.js  sqlite.test.js
software/shared/: colors.json
software/web/: index.html  package-lock.json  package.json  vite.config.js
software/web/src/: App.css  App.jsx  index.css
(+13 files in other folders)
